--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -17,16 +17,16 @@ endif::[]
 **** xref:public-cloud-guide/payg/payg-benefits.adoc[Benefits of {payg}]
 **** {payg} on AWS
 ***** xref:public-cloud-guide/payg/payg-aws-requirements.adoc[AWS requirements]
-***** xref:public-cloud-guide/payg/payg-find-the-aws-image.adoc[1.  Locate the Image]
+***** xref:public-cloud-guide/payg/payg-public-cloud-images.adoc[1. Public Cloud Images]
 ***** xref:public-cloud-guide/payg/payg-configure-the-image.adoc[2. Configuration and Startup]
 ***** xref:public-cloud-guide/payg/payg-server-setup.adoc[3. Server Setup]
 ***** xref:public-cloud-guide/payg/payg-webui-configuration.adoc[4. WebUI Configuration]
 ***** xref:public-cloud-guide/payg/payg-bootstrapping-process.adoc[5. Connecting Clients]
-***** xref:public-cloud-guide/payg/payg-support.adoc[Support]
-**** {payg} Appendix
-***** xref:public-cloud-guide/payg/payg-additional-resources.adoc[Additional Resources]
-***** xref:public-cloud-guide/payg/payg-faq.adoc[{payg} FAQ]
-***** xref:public-cloud-guide/payg/payg-country-listing.adoc[Supported Countries]
+***** xref:public-cloud-guide/payg/payg-support.adoc[A. Support]
+***** xref:public-cloud-guide/payg/payg-geographical-availability.adoc[B. Geographical Availability]
+***** xref:public-cloud-guide/payg/payg-faq.adoc[C. {payg} FAQ]
+
+
 
 ** xref:salt/salt-overview.adoc[Salt Guide]
 *** xref:salt/salt-terminology.adoc[Terminology]
