--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-faq.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-faq.adoc
@@ -251,4 +251,4 @@ link:https://www.suse.com/training/course/[]
 You can find both supported and unsupported countries at the following url:
 +
 
-xref:public-cloud-guide/payg/payg-country-listing.adoc[Supported Countries]
+xref:public-cloud-guide/payg/payg-geographical-availability.adoc[Geographical Availability]
