Replacing exact version number with productnumber parameter.

--- a/modules/client-configuration/pages/snippets/traditional_client_warning.adoc
+++ b/modules/client-configuration/pages/snippets/traditional_client_warning.adoc
@@ -2,10 +2,10 @@
 ifeval::[{suma-content} == true]
 [WARNING]
 ====
-This version of {productname} is compatible with Salt and traditional clients (on some operating systems). SUSE will deprecate traditional clients in the next {productname} 4.3 release.
+This version of {productname} is compatible with {salt} and traditional clients (on some operating systems). SUSE will deprecate traditional clients in the next {productname} {productnumber} release.
 
-The release that follows {productname} 4.3 will not support traditional clients and is planned for 2023. 
+The release that follows {productname} {productnumber} will not support traditional clients and is planned for 2023. 
 
-We encourage all new deployments to use Salt clients exclusively, and to migrate existing traditional clients to Salt.
+We encourage all new deployments to use {salt} clients exclusively, and to migrate existing traditional clients to {salt}.
 ====
 endif::[]
