--- a/modules/client-configuration/pages/contact-methods-traditional.adoc
+++ b/modules/client-configuration/pages/contact-methods-traditional.adoc
@@ -14,8 +14,8 @@ OSAD allows traditional clients to execute scheduled actions immediately.
 
 [WARNING]
 ====
-With SUSE Manager 4.3 release, traditional clients have been deprecated.
-The release following SUSE Manager 4.3 will not support traditional clients and traditional proxies, and it is planned for the year 2023.
+With SUSE Manager {productnumber} release, traditional clients have been deprecated.
+The release following SUSE Manager {productnumber} will not support traditional clients and traditional proxies, and it is planned for the year 2023.
 We encourage all new deployments to use Salt clients and Salt proxies exclusively, and to migrate existing traditional clients and proxies to Salt.
 +
 Be aware that when migrating from traditional clients to Salt minions you do not have to delete the registered clients before.
