clean up obtain public cloud images section

--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-public-cloud-images.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-public-cloud-images.adoc
@@ -1,31 +1,33 @@
-= Finding the SUSE Manager Server {productnumber} {payg} Image on AWS
+= Obtaining the {productname} Server {payg} public cloud image on AWS
 
 Follow these step-by-step instructions to locate the SUSE Manager {productnumber} {payg} image on AWS.
-You can also find the latest available images for the public cloud using Pint(Public Cloud Information Tracker). 
+You can also review the latest available images for the public cloud using Pint(Public Cloud Information Tracker). 
 
-See: link:https://pint.suse.com/?_gl=1*15h4x0c*_ga*NDgxMzUxNzIyLjE2NzUyNTI4MTI.*_ga_JEVBS2XFKK*MTY5NzQ1NjA2Mi44Ny4xLjE2OTc0NTczMjUuNTcuMC4w&resource=help[pint.suse.com]
+See: link:https://pint.suse.com/[pint.suse.com]
 
 
-.Procedure: Finding the {productname} {payg} image on AWS
+.Procedure: Obtaining the {productname} {payg} image on AWS
 
-. Login to the AWS **Management Console**:
+. In your browser navigate to the link:https://aws.amazon.com/console/[AWS Management Console].
 
-.. In your browser navigate to the link:https://aws.amazon.com/console/[AWS Management Console].
-.. Enter your AWS credentials and login.
+. Enter your AWS credentials and login.
 
-. Open the **EC2 Dashboard**:
+. From the AWS Management Console dashboard, locate the menu:Services[] dropdown.
 
-.. From the AWS Management Console dashboard, locate the menu:Services[] dropdown.
-.. From the menu select menu:EC2[] under the **Compute** section.
+. From the menu select menu:EC2[] under the **Compute** section.
 
-. Access the **AWS Marketplace**:
+. In the EC2 dashboard, in the main content section, you'll find the “Launch Instance” button. Click it.
 
-.. In the EC2 dashboard, in the main content section, you'll find the “Launch Instance” button. Click it.
-.. This will lead you to the “Choose an Amazon Machine Image (AMI)” page.
-.. Select **Browse more AMIs**
-.. Search for **SUSE Manager**
-.. Depending on your location select your AMI image. **SUSE Manager Server Family (EU and UK only)** or **SUSE Manager Server Family (non-EU and non-UK-only)**.
+. From the **Choose an Amazon Machine Image (AMI)** page. 
+Select **Browse more AMIs**
+
+. Search for **SUSE Manager**
+
+. Depending on your location select your AMI image. 
+
+* **SUSE Manager Server Family (EU and UK only)**
+* **SUSE Manager Server Family (non-EU and non-UK-only)**.
 
 . Click **Select**.
 
-. Proceed to the next document for configuration.
+. Proceed for image configuration.
