update public cloud image section and fix nav list

--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -13,7 +13,7 @@ endif::[]
 **** xref:public-cloud-guide/byos/setup.adoc[Initial Setup]
 **** xref:public-cloud-guide/byos/clients.adoc[Client Configuration]
 *** {payg} Guide
-**** xref:public-cloud-guide/payg/payg-overview.adoc[{payglongform} Overview]
+**** xref:public-cloud-guide/payg/payg-overview.adoc[{payg} Overview]
 **** xref:public-cloud-guide/payg/payg-benefits.adoc[Benefits of {payg}]
 **** {payg} on AWS
 ***** xref:public-cloud-guide/payg/payg-aws-requirements.adoc[AWS requirements]
