update webui configuration page

--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-webui-configuration.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-webui-configuration.adoc
@@ -10,13 +10,10 @@
 [NOTE]
 ====
 instance-flavor-check Tool::
-By default the **instance-flavor-check** tool is installed; it must remain installed as it determines PAYG instance status.
-Once executed, it identifies the system as PAYG.
+The **instance-flavor-check** tool is an essential component that comes pre-installed by default. Its presence is crucial, as it determines the status of PAYG instances. When invoked, this tool identifies and categorizes the system as a PAYG instance. By default this tool is configured to run on a schedule named **update-payg-default**.
 
 update-payg-default schedule task::
-Go to menu:Admin[Task Schedules] to locate the **update-payg-default** task.
-This task is configured by default to run every 10 minutes.
-This task checks for running payg instances by executing the **instance-flavor-check** tool.
+Navigate to the menu:Admin[Task Schedules] to find the **update-payg-default** task. By default, this task is set to run at 10-minute intervals. Its primary function is to monitor the presence of all running PAYG instances by executing the **instance-flavor-check tool**.
 ====
 
 
@@ -76,14 +73,19 @@ For more information on using {suse} products in the public cloud see: link:http
 .Procedure: Connecting {payg} SUSE Linux Enterprise instances to {productname}
 
 . Return to the SUSE Manager Server WebUI.
+
 . Navigate to menu:Admin[Setup Wizard > Pay-as-you-go] and click the btn:[+Add Pay-as-you-go] button.
+
 . Add a description.
+
 . Complete the instance SSH connection data:
   * Host: `URL of the machine`
   * SSH Port: `22`
   * User: `<user>`
   * Password: `<password>`
   * SSH Private Key
+
 . Click btn:[Create] and wait for the sync to finish.
-. Subsequently, go to menu:Admin[Setup Wizard > Products] to access SUSE Linux Enterprise products.
+
+. Proceed to menu:Admin[Setup Wizard > Products] to access your {payg} SUSE Linux Enterprise products.
 
