--- a/modules/administration/pages/infra-maintenance.adoc
+++ b/modules/administration/pages/infra-maintenance.adoc
@@ -31,8 +31,9 @@ This section contains a checklist for your downtime period, with links to furthe
 For information about database schema upgrades and PostgreSQL migrations, see xref:installation-and-upgrade:db-intro.adoc[].
 
 You can install updates using your package manager.
-For information on using {yast}, see https://documentation.suse.com/sles/15-SP3/html/SLES-all/cha-onlineupdate-you.html.
-For information on using zypper, see https://documentation.suse.com/sles/15-SP3/html/SLES-all/cha-sw-cl.html#sec-zypper.
+
+* For information on using {yast}, see https://documentation.suse.com/sles/15-SP4/html/SLES-all/cha-onlineupdate-you.html.
+* For information on using zypper, see https://documentation.suse.com/sles/15-SP4/html/SLES-all/cha-sw-cl.html#sec-zypper.
 
 ////
 Preferable, you run such a tool within a maintenance window; for more information, see xref:administration:maintenance-window.adoc#maintenance-window[].
