--- a/modules/client-configuration/pages/autoinst-distributions.adoc
+++ b/modules/client-configuration/pages/autoinst-distributions.adoc
@@ -118,6 +118,16 @@ There are three object types that are relevant for this:
 . Systems
 
 As a fourth special point of influence on the final kernel options is the Cobbler settings file [path]``/etc/cobbler/settings.yaml``.
-The Cobbler settings file defines default kernel options for all distributions.
+The Cobbler settings file defines default kernel options for all distributions. This is not supported in the context of {productname}.
 
 If you prefix an option with [literal]``!`` then the option will be removed from the final kernel command line.
+
+{productname} will manage the kernel options for both Profiles and Systems for you. As such you may only edit the kernel options for Distros.
+
+To achieve the desired result it is important to understand the process of how kernel options are being handled in {productname} and Cobbler:
+
+. The user enters the kernel options as a single line of text.
+. {productname} converts this to a dictionary like structure that preserves the order of the kernel options.
+. This pre-processed structure is sent to Cobbler via XML-RPC.
+. Cobbler safes this as a Python dictionary (which is order preserving) and combines the four sources of kernel options.
+. Cobbler takes the combined dictionary and computes a single line of text to be passed to the kernel command line.
