--- a/modules/installation-and-upgrade/pages/server-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/server-container-installation.adoc
@@ -1,5 +1,5 @@
 [[installation-server-containers]]
-= Install Containerized {productname} Server
+= Install containerized {productname} Server
 
 [NOTE]
 ====
