--- a/modules/installation-and-upgrade/pages/server-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/server-container-installation.adoc
@@ -18,7 +18,7 @@ endif::[]
 
 
 [cols="1,1,1", options="header"]
-.Server Container Host Hardware Requirements
+.Server container host hardware requirements
 |===
 
 | Hardware
