--- a/modules/installation-and-upgrade/pages/server-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/server-container-installation.adoc
@@ -52,7 +52,7 @@ You also need to ensure that reverse lookups are correctly configured.
 
 
 [[installation-server-containers-services]]
-== Install Container Services on the host system
+== Install container services on the host system
 
 {productname} Server containers are using [literal]``podman`` and [literal]``systemd`` to run and manage all server containers.
 
