--- a/modules/installation-and-upgrade/pages/server-container-setup.adoc
+++ b/modules/installation-and-upgrade/pages/server-container-setup.adoc
@@ -46,7 +46,8 @@ systemctl start uyuni-server.service
 
 [IMPORTANT]
 ====
-{productname} Server setup takes time. You can see the logs with [command]``journalctl -xeu uyuni-server.service``.
+{productname} Server setup takes time.
+You can see the logs with [command]``journalctl -xeu uyuni-server.service``.
 You can also use `podman logs` using the same name.
 ====
 
