--- a/modules/installation-and-upgrade/pages/server-container-setup.adoc
+++ b/modules/installation-and-upgrade/pages/server-container-setup.adoc
@@ -65,7 +65,7 @@ Prerequisites are:
 .Procedure: Enable passwordless `rsync` 
 [role=procedure]
 
-. In the destination server, add to `~/.ssh/config` :
+. In the destination server, add to [path]``~/.ssh/config`` :
 +
 ```
 Host host
