--- a/modules/installation-and-upgrade/pages/server-container-setup.adoc
+++ b/modules/installation-and-upgrade/pages/server-container-setup.adoc
@@ -83,7 +83,8 @@ If you already have a key, run:
 ssh-copy-id host
 ```
 If not, run `ssh-keygen` to generate it.
-If the source server user is not root,it should be able to run `rsync`. It can be done by adding to `/etc/sudoers`:
+If the source server user is not root, it should be able to run [command]``rsync``.
+It can be done by adding to [path]``/etc/sudoers``:
 +
 ```
 add to sudoers file
