--- a/modules/reference/pages/cli-container.adoc
+++ b/modules/reference/pages/cli-container.adoc
@@ -92,7 +92,7 @@ Flags:
 [[uyuni-tools-supportconfig]]
 === Supportconfig generation
 
-. In the host system run the command for generating supportconfig
+. In the host system, run the command for generating supportconfig:
 +
 ----
 uyunictl exec "supportconfig"
