--- a/modules/reference/pages/cli-container.adoc
+++ b/modules/reference/pages/cli-container.adoc
@@ -13,7 +13,7 @@ The [package]``uyuni-tools`` package has components as subpackages with CLI tool
 |===
 | Package name            | Tool name               | Installed on | Use for
 | ``uyuni-tools``         | ``uyunictl``            | Host         | day-to-day operations against a containerized {productname} server
-| ``uyuni-tools``         | ``uyuniadm``            | Host         | helps deployment and setup of a containerized {productname} server
+| ``uyuni-tools``         | ``uyuniadm``            | Host         | helps deployment and setup of a containerized {productname} Server
 |===
 
 
