--- a/modules/installation-and-upgrade/pages/server-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/server-container-installation.adoc
@@ -60,7 +60,7 @@ First step is to install a base system with the container control files provided
 
 
 [[proc-installation-server-containers-services]]
-.Procedure: Installation Of Container Services For {productname} Server
+.Procedure: Installation of container services for {productname} Server
 
 . As the base system, install openSUSE Leap with all available service packs and package updates applied.
 . Configure a resolvable fully qualified domain name (FQDN) with menu:yast[System > Network Settings > Hostname/DNS].
