updated byos section

--- a/modules/specialized-guides/pages/public-cloud-guide/byos/byos-overview.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/byos/byos-overview.adoc
@@ -1,6 +1,7 @@
 = BYOS Guide
 
-Bring your own subscription (BYOS)::
+== Bring your own subscription (BYOS)
+
 Bring your own subscription (BYOS) images are useful if you already have a support contract with SUSE and want to move your workloads to the public cloud. An instance launched from a BYOS image is equivalent to a physical machine that just received a SUSE Linux Enterprise Server installation from the SLES installation image. After creation, use **registercloudguest** to register the instance with the SUSE-operated update infrastructure in the cloud framework or use the **SUSEConnect** to register the system with **SUSE Customer Center** using the entitlements you already have. Connect your system to your own running RMT or SUSE Manager infrastructure in the same way you connect systems in your data center.
 
 BYOS instances make it easier to manage extensions such as **LTSS** or **kernel live-patching**. Extensions for PAYG instances can only be used in conjunction with SUSE Manager.
