update bootstrap and configuration docs

--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-bootstrapping-process.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-bootstrapping-process.adoc
@@ -1,6 +1,6 @@
-= {payg} Client bootstrapping process
+= {payg} Client bootstrapping
 
-== Managing PAYG and BYOS Images in the Bootstrapping Process
+== Managing and bootstrapping PAYG and BYOS images
 
 PAYG (Pay-As-You-Go) Images::
 Bootstrapping PAYG images is supported and can be done without additional prerequisites.
@@ -11,13 +11,54 @@ Bootstrapping BYOS images requires SCC (SUSE Customer Center) credentials before
 
 [IMPORTANT]
 ====
-Important: Do not register PAYG instances with the SUSE Customer Center.
-Registering PAYG instances with the SUSE Customer Center or your own RMT server will create conflicts that are not easily solved. Only register BYOS instances. PAYG instances are automatically registered against the correct update server.
+* Always verify the type of image (PAYG or BYOS) prior to initiating the bootstrapping process with {productname} to ensure a smooth and error-free process.
+
+* If you have SCC credentials ensure your SCC credentials are valid and have the necessary permissions for utilizing BYOS images.
+
+**Do not** register PAYG instances with the SUSE Customer Center.
+Only BYOS instances should be registered against the SUSE Customer Center.
+
+**Registering PAYG instances with the SUSE Customer Center or your own RMT server will create conflicts that are not easily solved**.  PAYG instances are automatically registered against the correct update server when added to your cloud service provider {productname} instance.
 ====
 
-[IMPORTANT]
-====
-* Ensure your SCC credentials are valid and have the necessary permissions for utilizing BYOS images.
+== Adding additional {payg} SUSE products as clients
 
-* Always verify the type of image (PAYG or BYOS) prior to initiating the bootstrapping process to ensure a smooth and error-free process.
-====
+.Procedure: Deploying {payg} SUSE Linux Enterprise instances in AWS
+
+. Search for the {sle} {payg} instance on AWS.
+
+. Configure the instance as needed.
+
+. Start the instance.
+
+For more information on using {suse} products in the public cloud see: link:https://documentation.suse.com/sle-public-cloud/all/html/public-cloud/cha-intro.html[SUSE Linux Enterprise Public Cloud Guide]
+
+
+== Connecting {payg} {sle} instances to {payg} instances of {productname}
+
+.Procedure: Connecting {payg} {sle} instances to {payg} instances of {productname}
+
+. Return to the SUSE Manager Server WebUI.
+
+. Navigate to menu:Admin[Setup Wizard > Pay-as-you-go] and click the btn:[+Add Pay-as-you-go] button.
+
+. Add a description.
+
+. Complete the instance SSH connection data:
+  * Host: `URL of the machine`
+  * SSH Port: `22`
+  * User: `<user>`
+  * Password: `<password>`
+  * SSH Private Key
+
+. Click btn:[Create] and wait for the sync to finish.
+
+. Proceed to menu:Admin[Setup Wizard > Products] to access your {payg} SUSE Linux Enterprise products.
+
+
+
+
+
+
+
+
