--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-webui-configuration.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-webui-configuration.adoc
@@ -34,16 +34,16 @@ The username is **admin** the password will be the **Instance ID** on AWS EC2.
 On a fresh server, the organization credentials table listed at menu:Admin[Setup Wizard > Organization Credentials] and the Products table listed under menu:Admin[Setup Wizard > Products] will be empty.
 ====
 
-.Procedure: Adding PAYG Credentials and Refreshing the Product List
+.Procedure: Verify credentials for {payg} and refreshing the product list
 
-. Visit the menu:Admin[Setup Wizard > Pay-as-you-go] tab to view and manage {payg} credentials.
+. On your fresh server navigate to the menu:Admin[Setup Wizard > Pay-as-you-go] tab to view and manage {payg} credentials. Localhost should provide the description **SUSE Manager Pay-as-you-go** and the **status** should read **Credentials successfully updated**
 
-. After filling in the credentials, navigate to the menu:Admin[Products] tab and click btn:[Refresh].
+. Navigate to the menu:Admin[Products] tab and click btn:[Refresh].
 
 . Once the refresh completes the following products are listed:
-* SUSE Manager Proxy
-* SUSE Manager Server
-* Free products 
+* **SUSE Manager Proxy**
+* **SUSE Manager Server**
+* **Free products**
 
 [IMPORTANT]
 ====
@@ -57,35 +57,5 @@ See: xref:client-configuration:registration-overview-redhat.adoc[Red Hat Client 
 ====
 
 
-== Adding additional {payg} SUSE products as clients
 
-.Procedure: Deploying {payg} SUSE Linux Enterprise instances in AWS
-
-. Search for the {sle} {payg} instance on AWS.
-
-. Configure the instance as needed.
-
-. Start the instance.
-
-For more information on using {suse} products in the public cloud see: link:https://documentation.suse.com/sle-public-cloud/all/html/public-cloud/cha-intro.html[SUSE Linux Enterprise Public Cloud Guide]
-
-
-.Procedure: Connecting {payg} SUSE Linux Enterprise instances to {productname}
-
-. Return to the SUSE Manager Server WebUI.
-
-. Navigate to menu:Admin[Setup Wizard > Pay-as-you-go] and click the btn:[+Add Pay-as-you-go] button.
-
-. Add a description.
-
-. Complete the instance SSH connection data:
-  * Host: `URL of the machine`
-  * SSH Port: `22`
-  * User: `<user>`
-  * Password: `<password>`
-  * SSH Private Key
-
-. Click btn:[Create] and wait for the sync to finish.
-
-. Proceed to menu:Admin[Setup Wizard > Products] to access your {payg} SUSE Linux Enterprise products.
 
