add IAM roles and improve configuration steps

--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-bootstrapping-process.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-bootstrapping-process.adoc
@@ -1,4 +1,4 @@
-= {payg} Client bootstrapping
+= {payg} Client connections and bootstrapping
 
 == Managing and bootstrapping PAYG and BYOS images
 
@@ -11,7 +11,7 @@ Bootstrapping BYOS images requires SCC (SUSE Customer Center) credentials before
 
 [IMPORTANT]
 ====
-* Always verify the type of image (PAYG or BYOS) prior to initiating the bootstrapping process with {productname} to ensure a smooth and error-free process.
+* Always verify the type of image (PAYG or BYOS) prior to initiating the bootstrapping process with {productname} to ensure a smooth and error-free connection.
 
 * If you have SCC credentials ensure your SCC credentials are valid and have the necessary permissions for utilizing BYOS images.
 
