--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-configure-the-image.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-configure-the-image.adoc
@@ -2,31 +2,37 @@
 
 This section covers initial preparation and configuration of the image on {aws}.
 
-.Procedure: Configure your {productname} instance
+[IMPORTANT]
+====
+Permissions for the IAM role name is required. this role must be attached after the instance is launched. If the role is attached prior to the instance launch {productname} will disconnect after one hour. You can create the role in advance, then select it from the existing IAM role dropdown during instance configuration.
 
+A role can be assigned to a running instance via: menu:Actions[Security > Modify IAM-role].
+
+For more information on IAM roles see: link:https://docs.aws.amazon.com/IAM/latest/UserGuide/id_roles.html[docs.aws.amazon.com/IAM]
+====
+
+.Procedure: Configure your {productname} instance
 
 . Select the AMI image and **Name** your Server.
   Review the details and pricing information provided. 
 
-. Additional Configuration:
+. You may configure additional instance details such as; storage, tags, security groups, and the required IAM role in subsequent steps.
 
-.. If you wish to configure instance details, storage, tags, or security groups, you can do so in the subsequent steps.
 .. The image automatically suggests a default CPU configuration.
 .. Choose an existing key pair or create a new one to provide access to the instance.
 .. Your organization should provide the security groups and network configuration.
-.. Provide at least 200 GB of storage for the server.
-.. Follow the AWS prompts to complete these configurations as needed.
+.. The IAM role should be attached if previously created by selecting it from the **Existing IAM role** dropdown. Otherwise attach this role after the instance has launched.
+.. Provide at least 200 GB of storage for the root partition of the server. It is recommended to add two additional partitions; One 500 GB partition for storage and one additional 80 GB partition for the database. For more information see: xref:public-cloud-guide/payg/payg-aws-requirements.adoc[AWS requirements]
 
-. Launch the Instance:
+.. Follow the AWS prompts to complete configuration as needed.
 
-.. After reviewing and making any necessary configurations, click the **Launch instance** dropdown.
+. After reviewing click the btn:Launch instance[] dropdown.
 
-.. Click on the "Launch Instances" button.
+. Click on the btn:Launch Instances[] button.
 
-. Verify the Launch:
+. You'll be redirected to the EC2 Dashboard.
 
-.. You'll be redirected to the EC2 Dashboard.
-.. Under “Instances” on the left sidebar, you should see your newly launched SUSE Manager {productnumber} {payg} instance running.
+. Verify the instance has launched; Select menu:Instances[] on the left sidebar. Your SUSE Manager {payg} instance should be running in the main content area.
 
 [NOTE] 
 .Usage and Costs
