updated steps and IAM role assignment

--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-configure-the-image.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-configure-the-image.adoc
@@ -1,38 +1,42 @@
-= Configure the image on EC2
+= Initial Preparation and Configuration of the AWS Image
 
 This section covers initial preparation and configuration of the image on {aws}.
 
 [IMPORTANT]
 ====
-Permissions for the IAM role name is required. this role must be attached after the instance is launched. If the role is attached prior to the instance launch {productname} will disconnect after one hour. You can create the role in advance, then select it from the existing IAM role dropdown during instance configuration.
+To ensure seamless operation, proper AWS permissions for the IAM role are essential. This role must be attached after the instance is launched; attaching it beforehand will result in a disconnection of {productname} after just one hour. You can pre-create the role and then select it from the existing IAM role dropdown during the instance configuration process.
 
-A role can be assigned to a running instance via: menu:Actions[Security > Modify IAM-role].
+A role can be assigned to a running instance through the following steps: menu:Actions[Security > Modify IAM-role].
 
-For more information on IAM roles see: link:https://docs.aws.amazon.com/IAM/latest/UserGuide/id_roles.html[docs.aws.amazon.com/IAM]
+For detailed information on IAM roles, see:  link:https://docs.aws.amazon.com/IAM/latest/UserGuide/id_roles.html[docs.aws.amazon.com/IAM]
 ====
 
-.Procedure: Configure your {productname} instance
+.Procedure: Configuring your {productname} instance
 
-. Select the AMI image and **Name** your Server.
+. Select the AMI image and provide a meaningful name for your server.
   Review the details and pricing information provided. 
 
-. You may configure additional instance details such as; storage, tags, security groups, and the required IAM role in subsequent steps.
+. You have the option to configure additional instance details in subsequent steps, such as storage, tags, security groups, and the required IAM role.
 
 .. The image automatically suggests a default CPU configuration.
-.. Choose an existing key pair or create a new one to provide access to the instance.
-.. Your organization should provide the security groups and network configuration.
-.. The IAM role should be attached if previously created by selecting it from the **Existing IAM role** dropdown. Otherwise attach this role after the instance has launched.
+
+.. Choose an existing key pair or create a new one to grant access to the instance.
+
+.. Your organization should provide the necessary security groups and network configuration.
+
+.. If an IAM role has been previously created, you can attach it by selecting it from the Existing menu:IAM role[] dropdown. Otherwise, attach this role after the instance has been launched.
+
 .. Provide at least 200 GB of storage for the root partition of the server. It is recommended to add two additional partitions; One 500 GB partition for storage and one additional 80 GB partition for the database. For more information see: xref:public-cloud-guide/payg/payg-aws-requirements.adoc[AWS requirements]
 
-.. Follow the AWS prompts to complete configuration as needed.
+.. Follow the prompts from AWS to complete the configuration as needed.
 
-. After reviewing click the btn:Launch instance[] dropdown.
+. After reviewing your configuration click the btn:Launch instance[] dropdown.
 
 . Click on the btn:Launch Instances[] button.
 
-. You'll be redirected to the EC2 Dashboard.
+. You will be redirected to the **EC2** Dashboard.
 
-. Verify the instance has launched; Select menu:Instances[] on the left sidebar. Your SUSE Manager {payg} instance should be running in the main content area.
+. Verify that the instance has successfully launched by selecting menu:Instances[] on the left sidebar. Your SUSE Manager {payg} instance should be running in the main content area.
 
 [NOTE] 
 .Usage and Costs
