updated terms of support

--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-support.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-support.adoc
@@ -1,14 +1,14 @@
 = Support
 
-Regardless of the public cloud you use and the plan you choose, SUSE has you covered with support. Support is dependent on whether you "bring your own subscription" (BYOS) or you use SUSE products "on-demand" (PAYG). 
+Regardless of the public cloud service you use or the plan you choose, SUSE has you covered with support. Where you get support is dependent on whether you "bring your own subscription" (BYOS) or you use SUSE products "on-demand" (PAYG). 
 
 BYOS::
 BYOS instances are supported by SUSE under the terms of your SUSE subscription. For an overview of SUSE's support subscriptions, refer to https://www.suse.com/support/.
 
 PAYG::
-Regular PAYG instances include support through the cloud service provider which in turn is supported by SUSE. If you have a problem, always contact your CSP for assistance. They provide 1st and 2nd level support, and will work with SUSE for L3 support as required.
+{productname} PAYG instances include support by SUSE. If you have a problem, always contact your CSP for assistance. They provide 1st and 2nd level support, and will work with SUSE for L3 support as required.
 
-For additional information see the official public cloud guide:
+For additional information on additional products and support see the {suse} public cloud guide:
 
 Public Cloud Guide::
 link:https://documentation.suse.com/sle-public-cloud/all/html/public-cloud/pre-example.html[SUSE Public Cloud Guide]
