update terms of suppport

--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-support.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-support.adoc
@@ -1,6 +1,6 @@
 = Support
 
-Regardless of the public cloud service you use or the plan you choose, SUSE has you covered with support. Where you get support is dependent on whether you "bring your own subscription" (BYOS) or you use SUSE products "on-demand" (PAYG). 
+Regardless of the public cloud service you use or the plan you choose, SUSE has you covered with support. Where you get support is dependent on whether you **bring your own subscription** (BYOS) or you use SUSE products **on-demand** (PAYG). 
 
 BYOS::
 BYOS instances are supported by SUSE under the terms of your SUSE subscription. For an overview of SUSE's support subscriptions, refer to https://www.suse.com/support/.
