--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-support.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-support.adoc
@@ -9,7 +9,7 @@ PAYG::
 {productname} PAYG instances include support by SUSE. If you have a problem, always contact your CSP for assistance. They provide 1st and 2nd level support, and will work with SUSE for L3 support as required.
 
 Public Cloud Guide::
-For additional information on additional products and support see the {suse} public cloud guide:
+For more information on cloud products and support see the {suse} public cloud guide:
 
 link:https://documentation.suse.com/sle-public-cloud/all/html/public-cloud/pre-example.html[SUSE Public Cloud Guide]
 
