update payg support terms

--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-support.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-support.adoc
@@ -8,7 +8,7 @@ BYOS instances are supported by SUSE under the terms of your SUSE subscription. 
 PAYG::
 {productname} PAYG instances include support by SUSE. If you have a problem, always contact your CSP for assistance. They provide 1st and 2nd level support, and will work with SUSE for L3 support as required.
 
-To open a ticket for {pagy} see: link:https://scc.suse.com/cloudsupport
+To open a ticket for {payg} see: link:https://scc.suse.com/cloudsupport
 
 Public Cloud Guide::
 For more information on cloud products and support see the {suse} public cloud guide:
