--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-support.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-support.adoc
@@ -6,7 +6,7 @@ BYOS::
 BYOS instances are supported by SUSE under the terms of your SUSE subscription. For an overview of SUSE's support subscriptions, refer to https://www.suse.com/support/.
 
 PAYG::
-{productname} PAYG instances include support by SUSE. If you have a problem, always contact your CSP for assistance. They provide 1st and 2nd level support, and will work with SUSE for L3 support as required.
+{productname} PAYG instances include support by SUSE.
 
 To open a ticket for {payg} see: link:https://scc.suse.com/cloudsupport
 
