update public cloud support location

--- a/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
@@ -1,4 +1,4 @@
-= Support
+= Public cloud support
 
 Regardless of the public cloud service you use or the plan you choose, SUSE has you covered with support. Where you get support is dependent on whether you **bring your own subscription** (BYOS) or you use SUSE products **on-demand** (PAYG). 
 
