--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -22,12 +22,7 @@ endif::[]
 ***** xref:public-cloud-guide/payg/payg-server-setup.adoc[3. Server Setup]
 ***** xref:public-cloud-guide/payg/payg-webui-configuration.adoc[4. WebUI Configuration]
 ***** xref:public-cloud-guide/payg/payg-bootstrapping-process.adoc[5. Connecting Clients]
-***** xref:public-cloud-guide/payg/payg-support.adoc[A. Support]
-***** xref:public-cloud-guide/payg/payg-geographical-availability.adoc[B. Geographical Availability]
-***** xref:public-cloud-guide/payg/payg-faq.adoc[C. {payg} FAQ]
-
-
-
+*** xref:public-cloud-guide/payg-support.adoc[A. Public Cloud Support]
 ** xref:salt/salt-overview.adoc[Salt Guide]
 *** xref:salt/salt-terminology.adoc[Terminology]
 *** xref:salt/salt-command.adoc[Salt Command]
