--- a/modules/installation-and-upgrade/pages/proxy-registration.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-registration.adoc
@@ -27,15 +27,15 @@ image::proxy-key.png[]
 +
 [IMPORTANT]
 ====
-Before you can select the correct child channels while creating the activation key, ensure you have completely downloaded the {productname} Proxy {productnumber} channel and all the recommended and mandatory {sle} {sles-version} {sp-version} channels.
+Before you can select the correct child channels while creating the activation key, ensure you have completely downloaded the {productname} Proxy {productnumber} channel and all the recommended and mandatory {sle} {sles-version} {sp-base} channels.
 ====
 
 . From the [guimenu]``Child Channels`` listing select the recommended channels by clicking the ``include recommended`` icon:
 +
-* SLE-Module-Basesystem15-SP5-Pool
-* SLE-Module-Basesystem15-SP5-Updates
-* SLE-Module-Server-Applications15-SP5-Pool
-* SLE-Module-Server-Applications15-SP5-Updates
+* SLE-Module-Basesystem15-{sp-base}-Pool
+* SLE-Module-Basesystem15-{sp-base}-Updates
+* SLE-Module-Server-Applications15-{sp-base}-Pool
+* SLE-Module-Server-Applications15-{sp-base}-Updates
 * SLE-Module-SUSE-Manager-Proxy-4.3-Pool
 * SLE-Module-SUSE-Manager-Proxy-4.3-Updates
 +
