section title improved

--- a/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
@@ -21,7 +21,7 @@ link:https://documentation.suse.com/sle-public-cloud/all/html/public-cloud/pre-e
 Public Cloud Information Tracker (Pint)::
 The Public Cloud Information Tracker (PINT) provides information about the images SUSE publishes and servers that are part of the SUSE operated update infrastructure. PINT is available at link:https://pint.suse.com/[pint.suse.com]  and provided as an API and command-line tool with the **python3-susepubliccloudinfo** package from the Public Cloud Module repository.
 
-== Collecting system information with supportconfig for Public Cloud Support
+== Collecting system information with supportconfig
   
 To create a TAR archive with detailed system information that you can hand over to Global Technical Support, use the command `supportconfig`. The command-line tool is provided by the package `supportutils` which is installed by default.
 
