--- a/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
@@ -45,7 +45,7 @@ Limits the features to check. The placeholder KEYWORDS is a comma-separated list
 
 . Wait for the tool to complete the operation.
 
-. The default archive location is `/var/log``, with the file name format being **scc_HOST_DATE_TIME.txz**
+. The default archive location is `/var/log`, with the file name format being **scc_HOST_DATE_TIME.txz**
 
 == Opening a new support case
 
